--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,131 @@
 alabaster==0.7.12
+alembic==1.8.1
+anyio==3.6.2
+apache-airflow==2.4.3
+apache-airflow-providers-common-sql==1.3.0
+apache-airflow-providers-ftp==3.2.0
+apache-airflow-providers-http==4.1.0
+apache-airflow-providers-imap==3.1.0
+apache-airflow-providers-sqlite==3.3.0
+apispec==3.3.2
+argcomplete==2.0.0
 asttokens==2.1.0
+attrs==22.1.0
 Babel==2.10.3
 backcall==0.2.0
+blinker==1.5
+cachelib==0.9.0
+cattrs==22.2.0
 certifi==2022.9.14
+cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
+clickclick==20.10.2
 colorama==0.4.6
+colorlog==4.8.0
+commonmark==0.9.1
+ConfigUpdater==3.1.1
+connexion==2.14.1
+cron-descriptor==1.2.32
+croniter==1.3.7
+cryptography==38.0.3
 debugpy==1.6.3
 decorator==5.1.1
+Deprecated==1.2.13
+dill==0.3.6
 distlib==0.3.6
+dnspython==2.2.1
 docs-from-tests==0.0.2
 docutils==0.19
+email-validator==1.3.0
 entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.0.4
 executing==1.2.0
 filelock==3.8.0
 flake8==5.0.4
+Flask==2.2.2
+Flask-AppBuilder==4.1.4
+Flask-Babel==2.0.0
+Flask-Caching==2.0.1
+Flask-JWT-Extended==4.4.4
+Flask-Login==0.6.2
+Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+graphviz==0.20.1
 greenlet==1.1.3
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.16.1
+httpx==0.23.1
 idna==3.4
 imagesize==1.4.1
+inflection==0.5.1
 ipykernel==6.17.1
 ipython==8.6.0
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
+jsonschema==4.17.0
 jupyter_client==7.4.7
 jupyter_core==5.0.0
+lazy-object-proxy==1.8.0
+linkify-it-py==2.0.0
+lockfile==0.12.2
+Mako==1.2.4
+Markdown==3.4.1
+markdown-it-py==2.1.0
 MarkupSafe==2.1.1
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+marshmallow-oneofschema==3.0.1
+marshmallow-sqlalchemy==0.26.1
 matplotlib-inline==0.1.6
 mccabe==0.7.0
+mdit-py-plugins==0.3.1
+mdurl==0.1.2
 nest-asyncio==1.5.6
 numpy==1.23.3
+openpyxl==3.0.10
 packaging==21.3
 pandas==1.5.0
 parso==0.8.3
+pathspec==0.9.0
+pendulum==2.1.2
 pickleshare==0.7.5
 platformdirs==2.5.4
+pluggy==1.0.0
+prison==0.2.1
 prompt-toolkit==3.0.32
 psutil==5.9.4
 psycopg2==2.9.5
 psycopg2-binary==2.9.3
 pure-eval==0.2.2
 pycodestyle==2.9.1
+pycparser==2.21
 pyflakes==2.5.0
 Pygments==2.13.0
+PyJWT==2.6.0
 pyparsing==3.0.9
+pyrsistent==0.19.2
+python-daemon==2.3.2
 python-dateutil==2.8.2
 python-decouple==3.6
+python-nvd3==0.15.0
+python-slugify==7.0.0
 pytz==2022.2.1
+pytzdata==2020.1
 pywin32==305
+PyYAML==6.0
 pyzmq==24.0.1
 requests==2.28.1
+requests-toolbelt==0.10.1
+rfc3986==1.5.0
+rich==12.6.0
+setproctitle==1.3.2
 six==1.16.0
+sniffio==1.3.0
 snowballstemmer==2.2.0
 Sphinx==5.3.0
 sphinxcontrib-applehelp==1.0.2
@@ -58,10 +135,23 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.41
+SQLAlchemy-JSONField==1.0.0
 SQLAlchemy-Utils==0.38.3
+sqlparse==0.4.3
 stack-data==0.6.1
+swagger-ui-bundle==0.0.9
+tabulate==0.9.0
+tenacity==8.1.0
+termcolor==2.1.1
+text-unidecode==1.3
 tornado==6.2
 traitlets==5.5.0
+typing_extensions==4.4.0
+uc-micro-py==1.0.1
+unicodecsv==0.14.1
 urllib3==1.26.12
 virtualenv==20.16.5
 wcwidth==0.2.5
+Werkzeug==2.2.2
+wrapt==1.14.1
+WTForms==3.0.1
